# rgui

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: errors.rs  main.rs
src/bat/: mod.rs
src/rg/: errors.rs  mod.rs  types.rs
src/util/: event.rs  mod.rs
