[package]
name = "rgui"
version = "0.1.0"
authors = ["Josh Chorlton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bat = { git = "https://github.com/jchorl/bat", rev = "5117845565a3087102e7f20de14762df96744be2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "^0.6.3"
